postal-code-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postal-code-service
  labels:
    app: postal-code
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: postal-code
  type: ClusterIP
