postal-code-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: postal-code-route
  labels:
    app: postal-code
spec:
  to:
    kind: Service
    name: postal-code-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
